add master page with pages

--- a/WebSite/HDFCMasterPage.master
+++ b/WebSite/HDFCMasterPage.master
@@ -1,6 +1,6 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="HDFCMasterPage.master.cs" Inherits="HDFCMasterPage" %>
 
-<!DOCTYPE html>
+
 
 <html>
 <head runat="server">
@@ -13,32 +13,17 @@
             border:2px solid black;
             border-collapse:collapse;
         }
-        flex{
-            display:flex;
+        .center{
             justify-items:center;
-            align-content:center;
+        }
+        .error{
+            color:red;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-        <span class="fs-4">Simple header</span>
-      </a>
-
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-      </ul>
-    </header>
-  </div>
     <form id="form1" runat="server">
-        <div class="flex">
+        <div class="center">
         <table>
         <thead>
             <tr>
@@ -46,7 +31,9 @@
             </tr>
             <tr>
                 <td colspan="4">Logged in: <asp:Label ID="lblUserEmail" runat="server" Text=""></asp:Label></td>
-                <td><button>Logout</button></td>
+                <td>
+                    <asp:Button ID="btnLogout" UseSubmitBehavior="false" runat="server" Text="Logout" OnClick="btnLogout_Click" />
+                </td>
             </tr>
             <tr>
                 <td><a href="Home.aspx">Home</a></td>
@@ -68,6 +55,8 @@
                     <h3>Contact Us:</h3> 
                     <address>
                         HDFC Loans Systems, 
+                        </address>
+                    <address>
                         Mumbai, Maharashtra, India
                     </address>
                 </td>
